# wallpaper-downloader

./: .gitignore  main.py  pyproject.toml
my_app/: cli.py  main.py
my_app/core/: services.py
my_app/routers/: web.py
my_app/static/: style.css
my_app/templates/: base.html  index.html
templates/: index.html
