[project]
name = "wallpaper-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.8",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
]
